<resources>
    <string name="app_name">SheepFlock</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="notificationMessage">sheep  %1$s is hungry</string>
    <string name="notificationHeader" >food time</string>
    <string name="need_feed">need feed</string>
    <string name="feedBtn">Feed</string>
    <string name="setting_feedPeriod">feed period (second)</string>
    <string name="remindPeriod">remind period (seconds)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="saved_Successfully">saved Successfully</string>
    <string name="settings">settings</string>
    <string name="id">ID</string>
    <string name="hungry">hungry</string>
    <string name="notHungry">not Hungry</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="NikName">nikname</string>
    <string name="Weight">Weight</string>
    <string name="LastFeedDate">Last Feed Date</string>
    <string name="IsHungry">Is Hungry?</string>
</resources>
